plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	 id 'io.spring.dependency-management' version '1.1.4' // NOT needed for Spring Boot 3.x
}

group = 'com.cropMatch'
version = '0.0.1-SNAPSHOT'
description = 'Crop-Match App project for Spring Boot'

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

repositories {
	mavenCentral()
}

configurations {
	all {
		// Exclude Spring Boot’s default logback-classic to avoid conflicts
		exclude group: 'ch.qos.logback', module: 'logback-classic'
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.liquibase:liquibase-core'

	implementation 'org.slf4j:slf4j-api:2.0.13'
	implementation 'org.slf4j:slf4j-simple:2.0.13'

	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	runtimeOnly 'com.mysql:mysql-connector-j'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.withType(JavaCompile) {
	options.compilerArgs += ["-Xlint:deprecation"]
}
